--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,14 +128,15 @@
 				<hr class="featurette-divider">
 				<div  class="container">
 					<div id="fight"  class="featurette">
-				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
+				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders-game.jpg">
 				        <h2 class="featurette-heading" style="color:#FFF;">Fight for glory. <span class="muted">Your Colleges' pride is at stake!</span></h2>
 				        <p class="lead" style="color:#999;">The competition will be judged by a select panel of judges with the winning team receiving some sort of amazing prize for you and your college. You will get your model / design built out by a professional 3D modeling agency to show off your handy work forever more.</p>
 				      </div>	
-				</div>				
+				</div>
+				<hr class="featurette-divider">				
 			</div>
 			
-			<hr class="featurette-divider">
+			
 			<div class="container">
 				<div id="site" class="featurette">
 			        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/site-picture.png">
