--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,10 +140,37 @@
 			<div class="container">
 				<div id="site" class="featurette">
 			        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/site-picture.png">
-			        <h2  class="featurette-heading">Abbey Street. <span class="muted">Is your playground!</span></h2>
+			        <h2  class="featurette-heading">Thomas Street. <span class="muted">Is your playground!</span></h2>
 			        <p class="lead">Are you a student or graduate built environment professional who wants to change the urban environment for the better? Here's your chance with the new <strong>Space Invaders</strong> competition.</p>
 			      </div>
 			</div>
+			
+			<div style="background:#111">
+				<hr class="featurette-divider">
+				<div class="container">
+					<div id="register" class="featurette">
+				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
+				        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">These are the criteria!</span></h2>
+				        <p class="lead" style="color:#999;">Because what's a competition without being able to to win something? 
+							Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
+							The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:
+							<ol>
+								<li>Context</li>
+								<li>Connections</li>
+								<li>Inclusivity</li>
+								<li>Variety</li>
+								<li>Efficiency</li>
+								<li>Distinctiveness</li>
+								<li>Layout</li>
+								<li>Public Realm</li>
+							</ol>
+							We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
+							<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">&raqo; Urban Design Manual</a>
+						</p>
+				      </div>	
+				</div>				
+			</div>
+			
 			<div style="background:#111">
 				<hr class="featurette-divider">
 				<div class="container">
