--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,6 +170,29 @@
 				      </div>	
 				</div>				
 			</div>
+			<div style="background:#111">
+				<hr class="featurette-divider">
+				<div class="container">
+					<div id="register" class="featurette">
+				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
+				        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted">Ace them all!</span></h2>
+				        <p class="lead" style="color:#999;">We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
+						<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">&raqo; Urban Design Manual</a>
+							<ol>
+								<li>Context</li>
+								<li>Connections</li>
+								<li>Inclusivity</li>
+								<li>Variety</li>
+								<li>Efficiency</li>
+								<li>Distinctiveness</li>
+								<li>Layout</li>
+								<li>Public Realm</li>
+							</ol>
+							
+						</p>
+				      </div>	
+				</div>				
+			</div>
 			
 			<div style="background:#111">
 				<hr class="featurette-divider">
