--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,7 +150,7 @@
 				<div class="container">
 					<div id="register" class="featurette">
 				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-				        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">These are the criteria!</span></h2>
+				        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">Got to win!</span></h2>
 				        <p class="lead" style="color:#999;">Because what's a competition without being able to to win something? 
 							Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
 							The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:
@@ -158,15 +158,16 @@
 				      </div>	
 				</div>				
 			</div>
+			
 			<div style="background:#111">
 				<hr class="featurette-divider">
 				<div class="container">
 					<div id="register" class="featurette">
-				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-				        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted">Ace them all!</span></h2>
+				        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
+				        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted"><a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a></span></h2>
 				        <p class="lead" style="color:#999;">We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
-						<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">&raqo; Urban Design Manual</a>
-							<ol>
+						<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>
+							<ol class="lead" style="color:#FFF;">
 								<li>Context</li>
 								<li>Connections</li>
 								<li>Inclusivity</li>
@@ -176,7 +177,6 @@
 								<li>Layout</li>
 								<li>Public Realm</li>
 							</ol>
-							
 						</p>
 				      </div>	
 				</div>				
