--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -186,7 +186,8 @@
 				<hr class="featurette-divider">
 				<div class="container">
 					<div id="register" class="featurette">
-                      <iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe>
+                      
+                      <div class="span-4"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>
 				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 				        <h2  class="featurette-heading" style="color:#FFF;">Register Now. <span class="muted">C'mon you know you want to!</span></h2>
 				        <p class="lead" style="color:#999;">You will need to form a team of 4 people in order to qualify for any prizes. Any less sure there won't be enough people to share the awesome prize with.</p>
