--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -189,7 +189,7 @@
                       
                       <div class="span-4"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>
 				        
-				        <h2  class="featurette-heading" style="color:#FFF;">Register Now. <span class="muted">C'mon you know you want to!</span></h2>
+				        <h2  class="featurette-heading">Register Now. <span class="muted">C'mon you know you want to!</span></h2>
 				        <p class="lead" style="color:#999;">You will need to form a team of 4 people in order to qualify for any prizes. Any less sure there won't be enough people to share the awesome prize with.</p>
 				      </div>	
 				</div>				
