--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -167,7 +167,7 @@
 				        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted"><a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a></span></h2>
 				        <p class="lead" style="color:#999;">We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
 						<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>
-							<ol class="lead" style="color:#FFF;">
+                          <ol class="lead" style="color:#FFF;margin-left:20px;">
 								<li>Context</li>
 								<li>Connections</li>
 								<li>Inclusivity</li>
