--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@
 				<hr class="featurette-divider">
 				<div class="container">
 					<div id="register" class="featurette">
-				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
+				        <img class="featurette-image pull-left img-rounded" src="http://farm9.staticflickr.com/8111/8552187468_6a580a357b_b.jpg">
 				        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">Got to win!</span></h2>
 				        <p class="lead" style="color:#999;">Because what's a competition without being able to to win something? 
 							Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
