--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,7 @@
 		      <li><a href="#what">What</a></li>
 		      <li><a href="#fight">Fight</a></li>
 			  <li><a href="#site">The Site</a></li>
+			  <li><a href="#criteria">Judging Criteria</a></li>
 			  <li><a href="#register">Register</a></li>
 		    </ul>
 			</div>
@@ -148,8 +149,8 @@
 			<div style="background:#111">
 				<hr class="featurette-divider">
 				<div class="container">
-					<div id="register" class="featurette">
-				        <img class="featurette-image pull-left img-rounded" src="http://farm9.staticflickr.com/8111/8552187468_6a580a357b_z.jpg">
+					<div id="criteria" class="featurette">
+				        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 				        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">Got to win!</span></h2>
 				        <p class="lead" style="color:#999;">Because what's a competition without being able to to win something? 
 							Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
@@ -160,9 +161,9 @@
 			</div>
 			
 			<div style="background:#111">
-				
+				<hr class="featurette-divider">
 				<div class="container">
-					<div id="register" class="featurette">
+					<div id="criteria" class="featurette">
 				        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 				        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted"><a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a></span></h2>
 				        <p class="lead" style="color:#999;">We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
@@ -190,7 +191,7 @@
                       <div class="span5" style="border:10px solid #CCC; padding:20px;margin-right:40px;"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>
 				        
 				        <h2  class="featurette-heading">Register Now. <span class="muted">C'mon you know you want to!</span></h2>
-				        <p class="lead" style="color:#999;">You will need to form a team of 2-4 people in order to qualify for any prizes. Any less sure there won't be enough people to share the awesome prize with.</p>
+				        <p class="lead" style="color:#999;">You will need to form a team of 4 people in order to qualify for any prizes. Any less sure there won't be enough people to share the awesome prize with.</p>
 				      </div>	
 				</div>				
 			</div>
