--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -199,9 +199,9 @@
 					<hr class="featurette-divider">
 					<div class="container">
 						<div id="criteria" class="featurette">
-					        <img class="featurette-image pull-left img-rounded" src="http://www.rtpi.org.uk/images/rtpi_logo.jpg">
-							<img class="featurette-image pull-left img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg">
-							<img class="featurette-image pull-left img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png">
+                          <img class="featurette-image pull-left img-rounded" src="http://www.rtpi.org.uk/images/rtpi_logo.jpg"><br />
+                          <img class="featurette-image pull-left img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg"><br />
+                          <img class="featurette-image pull-left img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"><br />
 					        <h2  class="featurette-heading" style="color:#FFF;">Thank you. <span class="muted">To these lovely folks!</span></h2>
 					        <p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the folks shown here. Thank you all for supporting the prizes, providing the venue and donating your time to making Space Invaders a reality.
 							</p>
