--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,10 @@
     .featurette-image {
       margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
     }
+	.featurette-image-spons {
+	  margin-right:40px;
+	  margin-bottom:20px;
+    }
 
     /* Give some space on the sides of the floated elements so text doesn't run right into it. */
     .featurette-image.pull-left {
@@ -59,7 +63,7 @@
 	        padding: 0;
 	      }
 	      .featurette-image.pull-left,
-	      .featurette-image.pull-right {
+	      .featurette-image.pull-right, .featurette-image-spons {
 	        display: block;
 	        float: none;
 	        max-width: 40%;
@@ -102,6 +106,7 @@
 			  <li><a href="#site">The Site</a></li>
 			  <li><a href="#criteria">Judging Criteria</a></li>
 			  <li><a href="#register">Register</a></li>
+			  <li><a href="#sponsors">Our Sponsors</a></li>
 		    </ul>
 			</div>
 		</div>
@@ -198,14 +203,15 @@
 				<div style="background:#111">
 					<hr class="featurette-divider">
 					<div class="container">
-                      <h2  class="featurette-heading" style="color:#FFF;">Thank you. <span class="muted">To these lovely folks!</span></h2>
-						<div id="criteria" class="featurette">
-                          <img class="img-rounded" src="http://www.rtpi.org.uk/images/rtpi_logo.jpg"><br />
-                          <img class="featurette-image img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg"><br />
-                          <img class=" img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"><br />
-					        
-					        <p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the folks shown here. Thank you all for supporting the prizes, providing the venue and donating your time to making Space Invaders a reality.
+						<div id="sponsors" class="featurette">
+						  <h2  class="featurette-heading" style="color:#FFF;">Thank you. <span class="muted">To these lovely folks!</span></h2>
+						  <img class="featurette-image-spons img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png">
+							<p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the folks shown here. Thank you all for supporting the prizes, providing the venue and donating your time to making Space Invaders a reality.
 							</p>
+							<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organised By</span></h2>
+                          <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_logo.jpg">
+                          <img class="featurette-image-spons img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg" style="height:100px;">
+					        
 					      </div>	
 					</div>				
 				</div>
