--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,9 @@
       line-height: 1;
       letter-spacing: -1px;
     }
+	.black {
+		background:#111;
+	}
 	/* RESPONSIVE CSS
 	    -------------------------------------------------- */
 
@@ -55,7 +58,7 @@
 	      }
 	      .navbar-inner {
 	        border-radius: 0;
-	        margin: -20px 0;
+	        margin: -40px 0;
 	      }
 	
 	     .featurette {
@@ -74,9 +77,9 @@
 
 	    @media (max-width: 767px) {
 
-	      .navbar-inner {
+	      /*.navbar-inner {
 	        margin: -20px;
-	      }
+	      }*/
 	      .featurette-heading {
 	        font-size: 30px;
 	      }
@@ -84,6 +87,7 @@
 	        font-size: 18px;
 	        line-height: 1.5;
 	      }
+		.black {margin-left:-20px; margin-right:-20px;}
 
 	    }
 	body {padding-top:40px;}
@@ -98,16 +102,24 @@
 	
 		<div class="navbar-inner">
 			<div class="container">
+			<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+				              <span class="icon-bar"></span>
+				              <span class="icon-bar"></span>
+				              <span class="icon-bar"></span>
+				            </button>
 		    <a class="brand" href="#">Space Invaders</a>
-		    <ul class="nav">
-		      <li class="active"><a href="#">Home</a></li>
-		      <li><a href="#what">What</a></li>
-		      <li><a href="#fight">Fight</a></li>
-			  <li><a href="#site">The Site</a></li>
-			  <li><a href="#criteria">Judging Criteria</a></li>
-			  <li><a href="#register">Register</a></li>
-			  <li><a href="#sponsors">Our Sponsors</a></li>
-		    </ul>
+			<div class="nav-collapse collapse">
+				<ul class="nav">
+			      <li class="active"><a href="#">Home</a></li>
+			      <li><a href="#what">What</a></li>
+			      <li><a href="#fight">Fight</a></li>
+				  <li><a href="#site">The Site</a></li>
+				  <li><a href="#criteria">Judging Criteria</a></li>
+				  <li><a href="#register">Register</a></li>
+				  <li><a href="#sponsors">Our Sponsors</a></li>
+			    </ul>
+			</div>
+		    
 			</div>
 		</div>
 </div>
@@ -116,6 +128,7 @@
   <div class='container'>
 	<div class="row">
 		<div class="span12">
+			<!--<img class="" src="{{site.baseurl}}/img/spaceinvaderslogo_black.png" style="width:400px;">-->
 			{{content}}
 		</div>
 		
@@ -124,13 +137,13 @@
 			
 			<div class="container" style="margin-top:60px;">
 				<div id="what" class="featurette">
-			        <img class="featurette-image pull-right img-rounded" src="http://farm9.staticflickr.com/8498/8289539114_ce3cd45b30_z.jpg">
+			        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/spaceinvaderslogo_black.png">
 			        <h2  class="featurette-heading">Redesign the city. <span class="muted">Do it your way!</span></h2>
 			        <p class="lead">Are you a student or graduate built environment professional who wants to change the urban environment for the better? Here's your chance with the new <strong>Space Invaders</strong> competition.</p>
 			      </div>
 			</div>
 			      
-			<div style="background:#111">
+			<div class="black" style="">
 				<hr class="featurette-divider">
 				<div  class="container">
 					<div id="fight"  class="featurette">
@@ -151,7 +164,7 @@
 			      </div>
 			</div>
 			
-			<div style="background:#111">
+			<div class="black">
 				<hr class="featurette-divider">
 				<div class="container">
 					<div id="criteria" class="featurette">
@@ -165,7 +178,7 @@
 				</div>				
 			</div>
 			
-			<div style="background:#111">
+			<div class="black">
 				
 				<div class="container">
 					<div id="criteria" class="featurette">
@@ -200,7 +213,7 @@
 				      </div>	
 				</div>	
 				
-				<div style="background:#111">
+				<div class="black">
 					<hr class="featurette-divider">
 					<div class="container">
 						<div id="sponsors" class="featurette">
