--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -224,6 +224,7 @@
 							<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organised By</span></h2>
                           <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_logo.jpg">
                           <img class="featurette-image-spons img-rounded" src="http://www.d1035517-1.cp.blacknight.com/wp-content/uploads/2011/08/YPN_logo_wp2.jpg" style="height:100px;">
+						  <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/ipi-logo.png" style="height:100px;">
 					        
 					      </div>	
 					</div>				
