--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,10 @@
 	.black {
 		background:#111;
 	}
+	.navbar .nav>li>a {
+	
+	padding: 20px 15px 10px;}
+	
 	/* RESPONSIVE CSS
 	    -------------------------------------------------- */
 
@@ -107,7 +111,7 @@
 				              <span class="icon-bar"></span>
 				              <span class="icon-bar"></span>
 				            </button>
-		    <a class="brand" href="#">Space Invaders</a>
+		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 			      <li class="active"><a href="#">Home</a></li>
