--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -114,13 +114,8 @@
 		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      <li class="active"><a href="#">Home</a></li>
-			      <li><a href="#what">What</a></li>
-			      <li><a href="#fight">Fight</a></li>
-				  <li><a href="#site">The Site</a></li>
-				  <li><a href="#criteria">Judging Criteria</a></li>
-				  <li><a href="#register">Register</a></li>
-				  <li><a href="#sponsors">Our Sponsors</a></li>
+			      <li class="active"><a href="{{site.baseurl}}">Home</a></li>
+			      
 			    </ul>
 			</div>
 		    
@@ -129,10 +124,49 @@
 </div>
 </div>
 <!--ENd Header -->
+<!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../assets/img/examples/slide-01.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="http://twitter.github.io/bootstrap//assets/img/examples/slide-02.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Learn more</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="../assets/img/examples/slide-03.jpg" alt="">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div><!-- /.carousel -->
 
-				{{content}}
-				<hr class="featurette-divider">
-							
+<div class="container">
+	{{content}}
+</div>
+				
 
 			      <!-- /END THE FEATURETTES -->
 
