--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -186,5 +186,5 @@
 		
   
   <script src='{{site.baseurl}}/site.js'></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
 </body>
