--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -121,6 +121,7 @@
 				  <li><a href="#criteria">Judging Criteria</a></li>
 				  <li><a href="#register">Register</a></li>
 				  <li><a href="#sponsors">Our Sponsors</a></li>
+				  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
 			    </ul>
 			</div>
 		    
