--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -154,4 +154,5 @@
   
   <script src='{{site.baseurl}}/site.js'></script>
   <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
+  {% include analytics.html %}
 </body>
