--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -122,6 +122,7 @@
 				  <li><a href="#register">Register</a></li>
 				  <li><a href="#sponsors">Our Sponsors</a></li>
 				  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
+				  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			    </ul>
 			</div>
 		    
