--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -115,6 +115,7 @@
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 			      <li class="active"><a href="{{site.baseurl}}">Home</a></li>
+			      <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			      
 			    </ul>
 			</div>
