added arc logo and amended nav

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,16 +111,10 @@
 				              <span class="icon-bar"></span>
 				              <span class="icon-bar"></span>
 				            </button>
-		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
+		    <a class="brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      <li class="active"><a href="#">Home</a></li>
-			      <li><a href="#what">What</a></li>
-			      <li><a href="#fight">Fight</a></li>
-				  <li><a href="#site">The Site</a></li>
-				  <li><a href="#criteria">Judging Criteria</a></li>
-				  <li><a href="#register">Register</a></li>
-				  <li><a href="#sponsors">Our Sponsors</a></li>
+			      <li><a href="{{site.baseurl}}/#competition" >The Competition</a></li>
 				  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
 				  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			    </ul>
@@ -128,14 +122,23 @@
 		    
 			</div>
 		</div>
+		
+		<ul class="nav nav-pill" style="margin-left:10em; background:#1b1b1b; border-bottom-left-radius:10px;border-bottom-right-radius:10px;">
+		      <li><a href="#what">What</a></li>
+		      <li><a href="#fight">Fight</a></li>
+			  <li><a href="#site">The Site</a></li>
+			  <li><a href="#criteria">Judging Criteria</a></li>
+			  <li><a href="#register">Register</a></li>
+			  <li><a href="#sponsors">Our Sponsors</a></li>
+		</ul>
 </div>
 </div>
 <!--ENd Header -->
-
+<div id="competition">
 				{{content}}
 				<hr class="featurette-divider">
 							
-
+</div>
 			      <!-- /END THE FEATURETTES -->
 
 
