--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -111,10 +111,10 @@
 				              <span class="icon-bar"></span>
 				              <span class="icon-bar"></span>
 				            </button>
-		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
+		    <a class="brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      <li class="active"><a href="{{site.baseurl}}">Home</a></li>
+			      <li class="active"><a href="{{site.baseurl}}/">Home</a></li>
 			      <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			      
 			    </ul>
