--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -127,7 +127,7 @@
 <!--ENd Header -->
 <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide">
+<!--    <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
           <img src="../assets/img/examples/slide-01.jpg" alt="">
@@ -162,7 +162,7 @@
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-    </div><!-- /.carousel -->
+    </div>--><!-- /.carousel -->
 
 <div class="container">
 	{{content}}
