--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,15 +114,9 @@
 		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      <li class="active"><a href="#">Home</a></li>
-			      <li><a href="#what">What</a></li>
-			      <li><a href="#fight">Fight</a></li>
-				  <li><a href="#site">The Site</a></li>
-				  <li><a href="#criteria">Judging Criteria</a></li>
-				  <li><a href="#register">Register</a></li>
-				  <li><a href="#sponsors">Our Sponsors</a></li>
-                  		  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
-                  		  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
+			      	<li><a href="{{site.baseurl}}/#competition" >The Competition</a></li>
+					  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
+					  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			    </ul>
 			</div>
 		    
