--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -114,8 +114,9 @@
 		    <a class="brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      <li class="active"><a href="{{site.baseurl}}/">Home</a></li>
-			      <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
+			      	<li><a href="{{site.baseurl}}/#competition" >The Competition</a></li>
+					  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
+					  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
 			      
 			    </ul>
 			</div>
