fixed info page top

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -165,7 +165,7 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div>--><!-- /.carousel -->
 
-<div class="container">
+<div class="container" style="margin-top: 50px;">
 	{{content}}
 </div>
 				
