--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -166,7 +166,19 @@
     </div>--><!-- /.carousel -->
 
 <div class="container" style="margin-top: 50px;">
-	{{content}}
+	<div class="row">
+		<div class="span3">
+			
+		</div>
+		<div class="span6">
+			{{content}}
+		</div>
+		
+		<div class="span3">
+			
+		</div>
+	</div>
+	
 </div>
 				
 
