modified info layout to be span6

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,9 +114,7 @@
 		    <a class="brand" href="#"><img src="{{site.baseurl}}/img/spaceinvaderslogo_white_s.png" style="padding-right:20px;" /></a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-			      	<li><a href="{{site.baseurl}}/#competition" >The Competition</a></li>
-					  <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us!</a></li>
-					  <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
+			      	{% include main_nav %}
 			    </ul>
 			</div>
 		    
