updated with sybil changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,7 @@
 	.black {
 		background:#111;
 	}
-	.navbar .nav>li>a {
+	.navbar .nav>li>a, .navbar .nav>li>a.active {
 	
 	padding: 20px 15px 10px;}
 	
@@ -95,6 +95,10 @@
 
 	    }
 	body {padding-top:40px;}
+	
+	.nav-pill > li:first-child {
+		border-bottom-left-radius:10px;
+	}
  
 </style>
 </head>
