updates to manual

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -51,6 +51,8 @@
 	
 	padding: 20px 15px 10px;}
 	
+	code {white-space:pre;}
+	
 	/* RESPONSIVE CSS
 	    -------------------------------------------------- */
 
