--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
   <title>{% if page.url != '/index.html' %}| {{page.title}} {% endif %}</title>
   <meta charset='UTF-8'/>
   
+  <meta name="description" content="Competition to develope a plan for the regeneration of Digital Hub site beside Dublins Guiness Storehouse into a new community">
+  <meta name="keywords" content="Town Planning, Planning Competition, Ireland, Dublin, DIT, UCD, QUB, IPI, YPN, RTPI, Irish Planning Institute, Dublin City Council, Thomas Street, Community, Students, Graduates, Town Planning, Spatial Planning">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.ico' type='image/x-icon' />
   
