--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,15 +124,17 @@
 		    
 			</div>
 		</div>
+		<div class="hidden-phone">
+			<ul class="nav nav-pill" style="margin-left:10em; background:#1b1b1b; border-bottom-left-radius:10px;border-bottom-right-radius:10px;">
+			      <li><a href="#what">What</a></li>
+			      <li><a href="#fight">Fight</a></li>
+				  <li><a href="#site">The Site</a></li>
+				  <li><a href="#criteria">Judging Criteria</a></li>
+				  <li><a href="#register">Register</a></li>
+				  <li><a href="#sponsors">Our Sponsors</a></li>
+			</ul>
+		</div>
 		
-		<ul class="nav nav-pill" style="margin-left:10em; background:#1b1b1b; border-bottom-left-radius:10px;border-bottom-right-radius:10px;">
-		      <li><a href="#what">What</a></li>
-		      <li><a href="#fight">Fight</a></li>
-			  <li><a href="#site">The Site</a></li>
-			  <li><a href="#criteria">Judging Criteria</a></li>
-			  <li><a href="#register">Register</a></li>
-			  <li><a href="#sponsors">Our Sponsors</a></li>
-		</ul>
 </div>
 </div>
 <!--ENd Header -->
