removed image and added sponsor us link below menu bar

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,7 +124,7 @@
 		    
 			</div>
 		</div>
-		<div class="hidden-phone">
+		<div class="hidden-phone hidden-tablet">
 			<ul class="nav nav-pill" style="margin-left:10em; background:#1b1b1b; border-bottom-left-radius:10px;border-bottom-right-radius:10px;">
 			      <li><a href="#what">What</a></li>
 			      <li><a href="#fight">Fight</a></li>
@@ -139,6 +139,12 @@
 </div>
 <!--ENd Header -->
 <div id="competition">
+	<div class="hidden-desktop">
+		<p class="text-center" style="margin-top:30px;">
+			<a href="{{site.baseurl}}/sponsor-us" class="btn btn-warning btn-large ">Sponsor Us!</a>
+		</p>
+	</div>
+	
 				{{content}}
 				<hr class="featurette-divider">
 							
