--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,6 +76,7 @@
 	        max-width: 40%;
 	        margin: 0 auto 20px;
 	      }
+			iframe#map.featurette-image.pull-right {max-width:100%;margin-bottom:20px;}
 	    }
 
 
@@ -84,6 +85,8 @@
 	      /*.navbar-inner {
 	        margin: -20px;
 	      }*/
+		  #map iframe,
+	      #map iframe {max-width:100%;}
 	      .featurette-heading {
 	        font-size: 30px;
 	      }
@@ -92,7 +95,7 @@
 	        line-height: 1.5;
 	      }
 		.black {margin-left:-20px; margin-right:-20px;}
-
+		.black .container {margin-left:20px; margin-right:20px;}
 	    }
 	body {padding-top:40px;}
 	
