--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -101,7 +101,7 @@
 </style>
 </head>
 <body data-spy="scroll" data-target=".navbar">
-	
+{% include facebook.html %}
 <!-- Header -->
 <div class="container">
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -124,45 +124,6 @@
 		</div>
 </div>
 </div>
-<!--ENd Header -->
-<!-- Carousel
-    ================================================== -->
-<!--    <div id="myCarousel" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="../assets/img/examples/slide-01.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="http://twitter.github.io/bootstrap//assets/img/examples/slide-02.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Learn more</a>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="../assets/img/examples/slide-03.jpg" alt="">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-    </div>--><!-- /.carousel -->
 
 <div class="container" style="margin-top: 50px;">
 	<div class="row">
@@ -171,6 +132,14 @@
 		</div>
 		<div class="span6">
 			{{content}}
+			
+			<div style="margin-top:20px;">
+				<a href="https://twitter.com/share" class="twitter-share-button" data-size="large">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				<div class="fb-like" data-href="{{site.baseurl}}{{post.url}}" data-width="300" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+			</div>
+			 	
+			
 		</div>
 		
 		<div class="span3">
