--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,4 +1,5 @@
 <li><a href="{{site.baseurl}}/#competition" >The Competition</a></li>
 <li><a href="{{site.baseurl}}/sponsor-us">Sponsor Us</a></li>
+<li><a href="{{site.baseurl}}/updates">Updates</a></li>
 <li><a href="{{site.baseurl}}/extra-info">Useful Info</a></li>
 <li><a href="mailto:spaceinvaders@dublin.com">Contact Us</a></li>
